# rp2040

./: CMakeLists.txt  blink.c  clocks.c  linker.ld  usb.c
inc/: clocks.h  gpio.h  led.h  pll.h  resets.h  sio.h  timer.h  usb.h  util.h  watchdog.h  xosc.h
src/: CMakeLists.txt  clocks.c  gpio.c  led.c  newlib.c  pll.c  resets.c  timer.c  usb.c  util.c  watchdog.c  xosc.c
src/asm/: CMakeLists.txt  util.s
sys/: boot2.s  newlib.c  newlib.s  vector.c
